<resources>
    <string name="app_name">TodoClima</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_AgregarCiudad">Clima</string>
    <string name="edt_Ciudad">Ingrese Nombre Ciudad</string>
    <string name="lbl_Temperatura">Temperatura:</string>
    <string name="lbl_latitud">Latitud:</string>
    <string name="lbl_longitud">Longitud:</string>
    <string name="lbl_presion">Presión Atmosférica:</string>
    <string name="lbl_humedad">Humedad:</string>
    <string name="lbl_tMinima">Temperatura Mínima:</string>
    <string name="lbl_tMaxima">Temperatura Máxima:</string>
    <string name="lbl_visibilidad">Visibilidad:</string>
    <string name="lbl_velocidadViento">Velocidad del Viento:</string>
</resources>
